--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>azure-spring-boot-sample</name>
-    <description>Sample demo application for azure spring boot</description>
+    <name>todo-app-java-on-azure</name>
+    <description>A todo list application uses AngularJS and Azure DocumentDB Spring boot starter</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -21,6 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <azure.spring.boot.starter.version>0.1.7</azure.spring.boot.starter.version>
     </properties>
 
     <dependencies>
@@ -35,7 +36,7 @@
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-documentdb-spring-boot-starter</artifactId>
-            <version>0.1.7</version>
+            <version>${azure.spring.boot.starter.version}</version>
         </dependency>
     </dependencies>
 
