--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <azure.spring.boot.starter.version>0.1.7</azure.spring.boot.starter.version>
+        <plugin.fmp.version>3.5.30</plugin.fmp.version>
+        <plugin.spotify.version>0.4.11</plugin.spotify.version>
         <docker.image.prefix>put-your-docker-registry-url</docker.image.prefix>
     </properties>
 
@@ -50,7 +52,7 @@
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.4.11</version>
+                <version>${plugin.spotify.version}</version>
                 <configuration>
                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                     <imageTags>
@@ -72,8 +74,7 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>fabric8-maven-plugin</artifactId>
-                <!-- This version should be changed once the feature published -->
-                <version>3.5.30</version>
+                <version>${plugin.fmp.version}</version>
                 <configuration>
                     <ignoreServices>true</ignoreServices>
                     <registry>${docker.image.prefix}</registry>
