--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,19 @@
             <artifactId>azure-documentdb-spring-boot-starter</artifactId>
             <version>${azure.spring.boot.starter.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>azure-ad-integration-spring-boot-starter</artifactId>
+            <version>${azure.spring.boot.starter.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
