--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 azure.documentdb.uri=put-your-documentdb-uri-here
 azure.documentdb.key=put-your-documentdb-key-here
 azure.documentdb.database=put-your-documentdb-databasename-here
+azure.activedirectory.clientId=put-your-application-id-here
+azure.activedirectory.clientSecret=put-your-application-key-here
+azure.activedirectory.ActiveDirectoryGroups=group1,group2
