--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.microsoft.azure</groupId>
     <artifactId>todo-app-java-on-azure</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>todo-app-java-on-azure</name>
@@ -20,11 +21,18 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.build.timestamp.format>yyMMddHHmmssSSS</maven.build.timestamp.format>
+
+        <!-- dependency versions -->
         <java.version>1.8</java.version>
         <azure.spring.boot.starter.version>0.1.7</azure.spring.boot.starter.version>
         <plugin.fmp.version>3.5.30</plugin.fmp.version>
         <plugin.spotify.version>0.4.11</plugin.spotify.version>
+        <plugin.azure.webapp.version>0.1.3</plugin.azure.webapp.version>
+
+        <!-- configurable properties -->
         <docker.image.prefix>put-your-docker-registry-url</docker.image.prefix>
+        <azure.app.name>todo-app-${maven.build.timestamp}</azure.app.name>
     </properties>
 
     <dependencies>
@@ -71,6 +79,10 @@
                     <serverId>${docker.image.prefix}</serverId>
                 </configuration>
             </plugin>
+
+            <!--*************************************************-->
+            <!-- Deploy to Kubernetes on Azure Container Service -->
+            <!--*************************************************-->
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>fabric8-maven-plugin</artifactId>
@@ -80,7 +92,34 @@
                     <registry>${docker.image.prefix}</registry>
                 </configuration>
             </plugin>
-             <plugin>
+
+            <!--*************************************************-->
+            <!-- Deploy to Azure Web App for Containers          -->
+            <!--*************************************************-->
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-webapp-maven-plugin</artifactId>
+                <version>${plugin.azure.webapp.version}</version>
+                <configuration>
+                    <resourceGroup>java-on-azure</resourceGroup>
+                    <appName>${azure.app.name}</appName>
+                    <region>westus</region>
+                    <pricingTier>s1</pricingTier>
+                    <containerSettings>
+                        <imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</imageName>
+                        <registryUrl>https://${docker.image.prefix}</registryUrl>
+                        <serverId>${docker.image.prefix}</serverId>
+                    </containerSettings>
+                    <appSettings>
+                        <property>
+                            <name>PORT</name>
+                            <value>8080</value>
+                        </property>
+                    </appSettings>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
