--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-azure.documentdb.uri=put-your-documentdb-uri-here
-azure.documentdb.key=put-your-documentdb-key-here
-azure.documentdb.database=put-your-documentdb-databasename-here
+azure.keyvault.uri=put-your-keyvault-uri-here
+azure.keyvault.client-id=put-your-service-principal-appid-here
+azure.keyvault.client-key=put-your-service-principal-password-here
+
