--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-azure.documentdb.uri=put-your-documentdb-uri-here
-azure.documentdb.key=put-your-documentdb-key-here
-azure.documentdb.database=put-your-documentdb-databasename-here
+azure.documentdb.uri=@env.DOCUMENTDB_URI@
+azure.documentdb.key=@env.DOCUMENTDB_KEY@
+azure.documentdb.database=@env.DOCUMENTDB_DBNAME@
