--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.6.RELEASE</version>
+        <version>1.5.8.RELEASE</version>
     </parent>
 
     <properties>
@@ -25,7 +25,6 @@
 
         <!-- dependency versions -->
         <java.version>1.8</java.version>
-        <azure.spring.boot.starter.version>0.1.7</azure.spring.boot.starter.version>
         <plugin.fmp.version>3.5.30</plugin.fmp.version>
         <plugin.spotify.version>0.4.11</plugin.spotify.version>
         <plugin.azure.webapp.version>0.1.3</plugin.azure.webapp.version>
@@ -35,19 +34,26 @@
         <azure.app.name>todo-app-${maven.build.timestamp}</azure.app.name>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-spring-boot-bom</artifactId>
+                <version>0.2.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-documentdb-spring-boot-starter</artifactId>
-            <version>${azure.spring.boot.starter.version}</version>
         </dependency>
     </dependencies>
 
