--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>spring-security-oauth2</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-ad-integration-spring-boot-starter</artifactId>
             <version>${azure.spring.boot.starter.version}</version>
