--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 azure.documentdb.uri=@env.DOCUMENTDB_URI@
 azure.documentdb.key=@env.DOCUMENTDB_KEY@
 azure.documentdb.database=@env.DOCUMENTDB_DBNAME@
+logging.file=springboot-elk-application.log
