Add application level logs (#40)
* add docker

* fix lint

* install java

* mv log to application properties

* ADD DOCKER

* add start.sh

* fix line ending

* fix

* change line ending

* fix filebeat

* add many things

* put aws es endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+logging.file=springboot-elk-application.log
 azure.documentdb.uri=@env.DOCUMENTDB_URI@
 azure.documentdb.key=@env.DOCUMENTDB_KEY@
 azure.documentdb.database=@env.DOCUMENTDB_DBNAME@
