--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
             <plugin>
                 <groupId>com.microsoft.azure</groupId>
                 <artifactId>azure-webapp-maven-plugin</artifactId>
-                <version>0.2.0-SNAPSHOT</version>
+                <version>1.1.0</version>
                 <configuration>
                     <resourceGroup>${azure.resourceGroup.name}</resourceGroup>
                     <appName>${azure.app.name}</appName>
