Fix application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-azure.documentdb.uri=${DOCUMENTDB_URI}
-azure.documentdb.key=${DOCUMENTDB_KEY}
-azure.documentdb.database=${DOCUMENTDB_DBNAME}
+azure.documentdb.uri=@env.DOCUMENTDB_URI@
+azure.documentdb.key=@env.DOCUMENTDB_KEY@
+azure.documentdb.database=@env.DOCUMENTDB_DBNAME@
