--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,11 @@
                     <region>westus</region>
                     <pricingTier>S3</pricingTier>
                     <linuxRuntime>tomcat 8.5-jre8</linuxRuntime>
+                    
+                    <!--
+                    <javaVersion>1.8</javaVersion>
+                    <javaWebContainer>tomcat 8.5</javaWebContainer>-->
+
                     <deploymentType>war</deploymentType>
                     <!--
                     <path></path>
