--- a/src/main/resources/web.config
+++ b/src/main/resources/web.config
@@ -5,7 +5,7 @@
             <add name="httpPlatformHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified"/>
         </handlers>
         <httpPlatform processPath="%JAVA_HOME%\bin\java.exe"
-                      arguments="-Djava.net.preferIPv4Stack=true -Dserver.port=%HTTP_PLATFORM_PORT% -jar &quot;%HOME%\site\wwwroot\todo-app-java-on-azure-1.0-SNAPSHOT.jar&quot;">
+                      arguments="-Djava.net.preferIPv4Stack=true -Dserver.port=%HTTP_PLATFORM_PORT% -jar &quot;%HOME%\site\wwwroot\app.jar&quot;">
         </httpPlatform>
     </system.webServer>
 </configuration>
