--- a/doc/resources/k8s/k8s.yml
+++ b/doc/resources/k8s/k8s.yml
@@ -2,7 +2,7 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: todo-app-java-on-azure_${BUILD_NUMBER}
+  name: todo-app-java-on-azure-${BUILD_NUMBER}
   namespace: default
   labels:
     k8s-app: todo-app-java-on-azure
