--- a/doc/resources/jenkins/deployment.yml
+++ b/doc/resources/jenkins/deployment.yml
@@ -2,24 +2,24 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: todo-app-java-on-azure
+  name: ${IMAGE_NAME}
   namespace: default
   labels:
-    k8s-app: todo-app-java-on-azure
+    k8s-app: ${IMAGE_NAME}
     role: ${BUILD_NUMBER}
 spec:
   selector:
     matchLabels:
-      k8s-app: todo-app-java-on-azure
+      k8s-app: ${IMAGE_NAME}
   template:
     metadata:
-      name: todo-app-java-on-azure
+      name: ${IMAGE_NAME}
       labels:
-        k8s-app: todo-app-java-on-azure
+        k8s-app: ${IMAGE_NAME}
         role: "${BUILD_NUMBER}"
     spec:
       containers:
-      - name: todo-app-java-on-azure
+      - name: ${IMAGE_NAME}
         image: "${ACR_REGISTRY}/${IMAGE_NAME}:${BUILD_NUMBER}"
       imagePullSecrets:
       - name: "${ACR_SECRET}"
