Add document link for deploying to Cloud Foundry with some fixes (#59)
* Remove top-level env config in CF manifest

* Add link to document in Readme

* Add placeholder for Application Insights

* Add options file for maven buildpack

* Add instruction to use maven buildpack

--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,6 @@ applications:
 - name: todo-app
   services:
   - todo-db
-env:
-  SPRING_PROFILES_ACTIVE: masb
+  env:
+    SPRING_PROFILES_ACTIVE: masb
+    # APPLICATION_INSIGHTS_IKEY: YOUR_APPLICATION_INSIGHTS_IKEY
