--- a/pom.xml
+++ b/pom.xml
@@ -43,18 +43,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-            <dependency>
-                <groupId>com.microsoft.servicefabric</groupId>
-                <artifactId>sf-reliablecache-spring</artifactId>
-                <version>1.0.0</version>
-		    </dependency>
-
-            <dependency>
-                <groupId>com.microsoft.servicefabric</groupId>
-                <artifactId>sf-web-interceptor</artifactId>
-                <version>1.0.0</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -72,6 +60,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+                    <dependency>
+                <groupId>com.microsoft.servicefabric</groupId>
+                <artifactId>sf-reliablecache-spring</artifactId>
+                <version>1.0.0</version>
+		    </dependency>
+            <dependency>
+                <groupId>com.microsoft.servicefabric</groupId>
+                <artifactId>sf-web-interceptor</artifactId>
+                <version>1.0.0</version>
+            </dependency>
     </dependencies>
 
     <build>
@@ -194,6 +192,32 @@
 	                    </execution>
 	                </executions>
             </plugin>
+            <plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-resources-plugin</artifactId>
+<version>2.6</version>
+<executions>
+<execution>
+<id>copy-resources</id>
+<phase>install</phase>
+<goals>
+<goal>copy-resources</goal>
+</goals>
+<configuration>
+<outputDirectory>${project.build.directory}/AppPkg</outputDirectory>
+<resources>
+<resource>
+<directory>target</directory>
+<includes>
+<include>${project.build.finalName}.jar</include>
+</includes>
+<filtering>false</filtering>
+</resource>
+</resources>
+</configuration>
+</execution>
+</executions>
+</plugin>
         </plugins>
     </build>
 </project>
