--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
                 <artifactId>sf-web-interceptor</artifactId>
                 <version>1.0.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jetty</artifactId>
+	        </dependency>
     </dependencies>
 
     <build>
