--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
                 <artifactId>sf-web-interceptor</artifactId>
                 <version>1.0.0</version>
             </dependency>
+			<dependency>
+			    <groupId>org.apache.commons</groupId>
+			    <artifactId>commons-io</artifactId>
+			    <version>1.3.2</version>
+			</dependency>
+            
     </dependencies>
 
     <build>
@@ -148,7 +154,7 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+            <!-- plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
@@ -174,7 +180,7 @@
                     <linkXRef>false</linkXRef>
                 </configuration>
                 <inherited>true</inherited>
-            </plugin>
+            </plugin-->
 
             <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
