--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-azure.cosmosdb.uri=${COSMOSDB_URI}
-azure.cosmosdb.key=${COSMOSDB_KEY}
-azure.cosmosdb.database=${COSMOSDB_DBNAME}
+azure.cosmosdb.uri=@env.DOCUMENTDB_URI@
+azure.cosmosdb.key=@env.DOCUMENTDB_KEY@
+azure.cosmosdb.database=@env.DOCUMENTDB_DBNAME@
