--- a/ansible/AKS/aks_create.yml
+++ b/ansible/AKS/aks_create.yml
@@ -1,3 +1,7 @@
+# Description
+# ===========
+# This playbook create an ACR, an AKS and deploy secrets into AKS
+
 ---
 - hosts: localhost
   vars_files:
