--- a/ansible/VM/vm_deploy.yml
+++ b/ansible/VM/vm_deploy.yml
@@ -1,3 +1,7 @@
+# Description
+# ===========
+# This playbook build the sample application and deploy it into VM
+
 ---
 - hosts: localhost
   vars_files:
