code updates from feedback

--- a/ansible/AKS/aks_deploy.yml
+++ b/ansible/AKS/aks_deploy.yml
@@ -1,6 +1,17 @@
 # Description
 # ===========
-# This playbook build the sample application into docker image, push the image into ACR and deploy the image into AKS
+# Use this playbook to 
+# - git clone and build a sample java app into docker image
+# - Push the image into ACR
+# - Deploy the image into AKS
+#
+# Use aci_create playbook to create ACR first
+#
+# Dependencies
+# ============
+# - maven on ansible host
+# - git on ansible host
+# - docker on ansible host
 
 - hosts: localhost
   vars_files:
